fix: fix overflow of projects section

--- a/src/scss/components/_projects.scss
+++ b/src/scss/components/_projects.scss
@@ -3,6 +3,7 @@
   min-height: 100vh;
   display: grid;
   place-items: center;
+  overflow: hidden;
 
   &__content {
     padding: 2rem;
